--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "target": "es5",
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "target": "ES2016",
+    "lib": ["dom", "esnext", "es7"],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
