--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "file-loader": "^6.2.0",
     "next": "13.4.19",
     "postcss": "8.4.28",
+    "preline": "^1.9.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "recoil": "^0.7.7",
