--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6",
     "use-sound": "^4.0.1"
+  },
+  "devDependencies": {
+    "daisyui": "^3.7.4"
   }
 }
