--- a/package.json
+++ b/package.json
@@ -16,22 +16,28 @@
     "@types/node": "20.5.4",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
+    "@types/react-redux": "^7.1.26",
     "autoprefixer": "10.4.15",
     "dayjs": "^1.11.9",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
     "next": "13.4.19",
+    "next-redux-wrapper": "^8.1.0",
     "postcss": "8.4.28",
     "preline": "^1.9.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-redux": "^8.1.2",
     "recoil": "^0.7.7",
+    "redux": "^4.2.1",
+    "redux-logger": "^3.0.6",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6",
     "use-sound": "^4.0.1"
   },
   "devDependencies": {
     "daisyui": "^3.7.4",
-    "file-loader": "^6.2.0"
+    "file-loader": "^6.2.0",
+    "redux-devtools-extension": "^2.13.9"
   }
 }
