--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "@types/react-redux": "^7.1.26",
+    "@types/redux-logger": "^3.0.9",
     "autoprefixer": "10.4.15",
     "dayjs": "^1.11.9",
     "eslint": "8.47.0",
