--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "postcss": "8.4.28",
     "preline": "^1.9.0",
     "react": "18.2.0",
+    "react-compound-timer": "^2.0.5",
     "react-dom": "18.2.0",
     "react-redux": "^8.1.2",
     "recoil": "^0.7.7",
